[tool.poetry]
name = "threading"
version = "0.1.0"
description = ""
authors = ["Vadim Vikhrachev <vikhrachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.2.0"
black = "^25.1.0"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
protobuf = "^6.30.2"
memcache = "^0.12.0"
pymemcache = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
